--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.22",
-    "axios": "^1.1.2",
-    "laravel-vite-plugin": "^0.7.2",
-    "lodash": "^4.17.19",
-    "postcss": "^8.1.14",
-    "tailwindcss": "^3.4.0",
-    "vite": "^4.0.0"
-  },
-  "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "alpinejs": "^3.15.2",
-    "bootstrap": "^5.3.8",
-    "d3": "^7.9.0",
-    "tippy.js": "^6.3.7",
-    "umap-js": "^1.4.0"
-  }
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.22",
+        "axios": "^1.1.2",
+        "laravel-vite-plugin": "^0.7.2",
+        "lodash": "^4.17.19",
+        "postcss": "^8.1.14",
+        "tailwindcss": "^3.4.0",
+        "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "alpinejs": "^3.15.2",
+        "bootstrap": "^5.3.8",
+        "d3": "^7.9.0",
+        "flatpickr": "^4.6.13",
+        "tippy.js": "^6.3.7",
+        "umap-js": "^1.4.0"
+    }
 }
